fix java's lacking of removeFirst()